--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,8 @@ AllCops:
     - "Rakefile"
   DisplayCopNames: true
 
+rubocop:disable Style/CaseEquality
+
 Metrics/LineLength:
   Max: 120
 Metrics/MethodLength:
