--- a/.stickler.yml
+++ b/.stickler.yml
@@ -1,10 +1,7 @@
 linters:
   rubocop:
     display_cop_names: true
-    # indicate where is the config file for stylelint
-    config: './rubocop.yml'
-
-# add the files here you want to be ignored by stylelint
+    fixer: true
 files:
   ignore:
     - "bin/*"
